style: fix @media screen button mobile

--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -42,6 +42,17 @@ section.task-list {
       background: #fff;
       font-size: 16px;
 
+      @media (max-width: 460px) {
+        & {
+          flex-direction: column;
+          button {
+            margin-top: 0.875rem;
+            justify-content: center;
+            width: 100%;
+          }
+        }
+      }
+
       input {
         flex: 1;
         background: var(--background);
